<resources>
    <string name="app_name">Next Class</string>
    <string name="onboarding_image_description">onboarding_image</string>
    <string name="onboarding_title">Welcome to Next Class</string>
    <string name="onboarding_description">Learn anytime, anywhere. with our personalized classes.</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="app_logo">app_logo</string>
    <string name="sign_in_google">Continue with Google</string>
    <string name="or_text">or</string>
    <string name="login_subtitle">Hope you have fun learning with us!</string>
    <string name="welcome_text">Welcome To The Future of Learning.</string>
    <string name="sign_in_email">Sign in with Email</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="default_web_client_id">744221201058-jkbsf4sm3m3802e5n9nhje5b7lebsgv3.apps.googleusercontent.com</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="search">search</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_course">Course\n</string>
    <string name="explore">Explore</string>
    <string name="profile">profile\n</string>

    <string name="explore_page_text">This is the Explore Page</string>
    <string name="welcome_to_next_class">Welcome to Next Class</string>
    <string name="contact_ahofama_org">Contact: ahofama.org</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="my_courses">My Courses</string>
    <string name="my_courses_page_text">This is the Courses Page</string>
    <string name="wishlist_page">This is the Wishlist Page</string>
    <string name="dashboard">Dashboard</string>
    <string name="create">Create</string>
    <string name="profile_image">Profile Image</string>
    <string name="loading">Loading</string>
    <string name="account_information">Account Information</string>
    <string name="user_id">User ID:</string>
    <string name="account_type">Account Type:</string>
    <string name="google_account">Google Account</string>
    <string name="logging_out">Logout</string>
    <string name="inbox">Inbox</string>
    <string name="completed">completed</string>
    <string name="enrolled_courses">Enrolled Courses</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="instructors">Instructors</string>
    <string name="type_message">message</string>
    <string name="attach_file">attach_file</string>
    <string name="back">back</string>
    <string name="user_name">Name</string>
    <string name="online">online</string>
    <string name="no_messages_yet">empty</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="emoji">emoji</string>
    <string name="send_message">send message</string>
    <string name="typing">Typinp</string>
    <string name="more_options">More</string>
    <string name="already_have_an_account">Already have an account!</string>


</resources>