<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?attr/colorSurface"
    tools:context=".OnboardingActivity">

    <!-- Onboarding Image -->

    <!-- Onboarding Title -->

    <ImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/onboarding_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding1"
        app:layout_constraintBottom_toTopOf="@+id/tv_onboarding_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/tv_onboarding_title"
        android:layout_width="361dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/onboarding_title"
        android:textColor="@color/primary"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_onboarding_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Onboarding Description -->
    <TextView
        android:id="@+id/tv_onboarding_description"
        android:layout_width="366dp"
        android:layout_height="51dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/onboarding_description"
        android:textColor="@color/other"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Get Started Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_height="56dp"
        android:text="@string/get_started"
        app:cornerRadius="16dp"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:backgroundTint="?attr/colorPrimary"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>